@@ -1,0 +1,13 @@
+[Keymap Entry]
+Countries=1
+_Name=Latvian standard xkb keymap
+Codepage=iso-8859-13
+Type=105
+Arch=ix86
+Command=setxkbmap lv
+
+[Country 0]
+Flag=lv.png
+Label=lv
+_Language=Latvian
+_Country=Latvia
