@@ -1,0 +1,13 @@
+[Keymap Entry]
+Countries=1
+_Name=Latvian (~) xkb keymap
+Codepage=iso-8859-13
+Type=105
+Arch=ix86
+Command=setxkbmap lv -variant tilde
+
+[Country 0]
+Flag=lv.png
+Label=lvt
+_Language=Latvian
+_Country=Latvia
