@@ -3,7 +3,7 @@ GKB_BITMAPS = \
 	by.png ca.png ch.png cu.png cz.png de.png dj.png dk.png \
 	dz.png ee.png eg.png es.png eu.png fi.png fr.png uk.png ge.png \
 	gkb.png gr.png hr.png hu.png il.png iq.png is.png it.png jo.png \
-	jp.png km.png kw.png la.png lb.png lt.png ly.png ma.png mk.png \
+	jp.png km.png kw.png la.png lb.png lt.png lv.png ly.png ma.png mk.png \
 	mx.png nl.png no.png om.png pl.png ps.png pt.png qa.png qc.png \
 	ro.png ru.png sa.png se.png si.png sk.png so.png sd.png \
 	sy.png th.png tn.png tr.png ua.png un.png us.png uy.png \
