@@ -98,6 +98,9 @@ gkb-new/descs/LT_Lithuanian.keyprop.desktop.in
 gkb-new/descs/LT_Lithuanian_x.keyprop.desktop.in
 gkb-new/descs/LT_Prog.keyprop.desktop.in
 gkb-new/descs/LT_Standard.keyprop.desktop.in
+gkb-new/descs/LV_Apostrophe.keyprop.desktop.in
+gkb-new/descs/LV_Standard.keyprop.desktop.in
+gkb-new/descs/LV_Tilda.keyprop.desktop.in
 gkb-new/descs/MK_Macedonian.keyprop.desktop.in
 gkb-new/descs/MN_Mongolian.keyprop.desktop.in
 gkb-new/descs/MN_Mongolian_x.keyprop.desktop.in
