@@ -1,3 +1,13 @@
+2004-10-30  Sergey V. Udaltsov <svu@gnome.org>
+
+	* configure.in:
+	* gkb-new/descs/Makefile.am:
+	* gkb-new/descs/LV_Apostrophe.keyprop.desktop.in:
+	* gkb-new/descs/LV_Standard.keyprop.desktop.in:
+	* gkb-new/descs/LV_Tilda.keyprop.desktop.in:
+	* gkb-new/gkb/Makefile.am:
+	* gkb-new/gkb/lv.png: Adding Latvian layout. Fixing #128740
+
 2004-10-30  Davyd Madeley  <davyd@madeley.id.au>
 
 	* configure.in:
